--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-/latex-build
-/report.aux
-/report.fdb_latexmk
-/report.fls
-/report.log
-/report.markdown.lua
-/report.synctex.gz
+*.aux
+*.bbl
+*.bcf
+*.blg
+*.fdb_latexmk
+*.fls
+*.log
+*.markdown.lua
+*.run.xml
+*.synctex.gz
 /_markdown_report
